--- a/app/src/main/res/layout/constraint_layout.xml
+++ b/app/src/main/res/layout/constraint_layout.xml
@@ -13,7 +13,8 @@
         android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="#000000"
-        android:textSize="25sp"
+        android:layout_margin="@dimen/button_margin"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,11 +24,10 @@
         android:id="@+id/button_7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button7"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_4"
         app:layout_constraintEnd_toStartOf="@id/button_8"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,11 +37,10 @@
         android:id="@+id/button_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button8"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_5"
         app:layout_constraintEnd_toStartOf="@id/button_9"
         app:layout_constraintStart_toEndOf="@+id/button_7"
@@ -51,11 +50,10 @@
         android:id="@+id/button_9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button9"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_6"
         app:layout_constraintEnd_toStartOf="@id/button_multiplication"
         app:layout_constraintStart_toEndOf="@+id/button_8"
@@ -65,11 +63,10 @@
         android:id="@+id/button_multiplication"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_mult"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_minus"
         app:layout_constraintStart_toEndOf="@+id/button_9"
         app:layout_constraintTop_toBottomOf="@id/textField" />
@@ -78,11 +75,10 @@
         android:id="@+id/button_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button4"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_1"
         app:layout_constraintEnd_toStartOf="@id/button_5"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,11 +88,10 @@
         android:id="@+id/button_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button5"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_2"
         app:layout_constraintEnd_toStartOf="@id/button_6"
         app:layout_constraintStart_toEndOf="@+id/button_4"
@@ -106,11 +101,10 @@
         android:id="@+id/button_6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button6"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_3"
         app:layout_constraintEnd_toStartOf="@id/button_minus"
         app:layout_constraintStart_toEndOf="@+id/button_5"
@@ -120,11 +114,10 @@
         android:id="@+id/button_minus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_minus"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_plus"
         app:layout_constraintStart_toEndOf="@+id/button_6"
         app:layout_constraintTop_toBottomOf="@id/button_multiplication" />
@@ -133,11 +126,10 @@
         android:id="@+id/button_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button1"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_C"
         app:layout_constraintEnd_toStartOf="@id/button_2"
         app:layout_constraintStart_toStartOf="parent"
@@ -147,11 +139,10 @@
         android:id="@+id/button_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button2"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_0"
         app:layout_constraintEnd_toStartOf="@id/button_3"
         app:layout_constraintStart_toEndOf="@+id/button_1"
@@ -161,11 +152,10 @@
         android:id="@+id/button_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button3"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_dot"
         app:layout_constraintEnd_toStartOf="@id/button_plus"
         app:layout_constraintStart_toEndOf="@+id/button_2"
@@ -175,11 +165,10 @@
         android:id="@+id/button_plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_plus"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintTop_toBottomOf="@id/button_minus"
         app:layout_constraintStart_toEndOf="@+id/button_3"
         app:layout_constraintBottom_toTopOf="@id/button_division"/>
@@ -188,11 +177,10 @@
         android:id="@+id/button_C"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_cancel"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintTop_toBottomOf="@id/button_1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_0"
@@ -202,11 +190,10 @@
         android:id="@+id/button_0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button0"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintTop_toBottomOf="@id/button_2"
         app:layout_constraintStart_toEndOf="@+id/button_C"
         app:layout_constraintEnd_toStartOf="@id/button_dot"
@@ -216,11 +203,10 @@
         android:id="@+id/button_dot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_dot"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintTop_toBottomOf="@id/button_3"
         app:layout_constraintStart_toEndOf="@+id/button_0"
         app:layout_constraintEnd_toStartOf="@id/button_division"
@@ -230,11 +216,10 @@
         android:id="@+id/button_division"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_div"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintBottom_toTopOf="@id/button_eqls"
         app:layout_constraintStart_toEndOf="@+id/button_dot"
         app:layout_constraintTop_toBottomOf="@id/button_plus" />
@@ -243,11 +228,10 @@
         android:id="@+id/button_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="9"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_del"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintEnd_toStartOf="@id/button_eqls"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_C" />
@@ -256,11 +240,10 @@
         android:id="@+id/button_eqls"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_weight="3"
+        android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_eql"
-        android:textSize="25sp"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintStart_toEndOf="@+id/button_delete"
         app:layout_constraintTop_toBottomOf="@id/button_0"
         app:layout_constraintEnd_toEndOf="@id/button_division"/>
