--- a/app/src/main/res/layout/constraint_layout.xml
+++ b/app/src/main/res/layout/constraint_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="#FFFAFA">
 
     <TextView
@@ -21,8 +21,8 @@
 
     <Button
         android:id="@+id/button_7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button7"
@@ -34,8 +34,8 @@
 
     <Button
         android:id="@+id/button_8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button8"
@@ -47,8 +47,8 @@
 
     <Button
         android:id="@+id/button_9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button9"
@@ -60,9 +60,10 @@
 
     <Button
         android:id="@+id/button_multiplication"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
+        android:layout_marginRight="2dp"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_mult"
         android:textSize="@dimen/button_text_size"
@@ -72,8 +73,8 @@
 
     <Button
         android:id="@+id/button_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button4"
@@ -85,8 +86,8 @@
 
     <Button
         android:id="@+id/button_5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button5"
@@ -98,8 +99,8 @@
 
     <Button
         android:id="@+id/button_6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button6"
@@ -111,8 +112,8 @@
 
     <Button
         android:id="@+id/button_minus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_minus"
@@ -123,8 +124,8 @@
 
     <Button
         android:id="@+id/button_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button1"
@@ -136,8 +137,8 @@
 
     <Button
         android:id="@+id/button_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button2"
@@ -149,8 +150,8 @@
 
     <Button
         android:id="@+id/button_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button3"
@@ -162,8 +163,8 @@
 
     <Button
         android:id="@+id/button_plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_plus"
@@ -174,8 +175,8 @@
 
     <Button
         android:id="@+id/button_C"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_cancel"
@@ -187,8 +188,8 @@
 
     <Button
         android:id="@+id/button_0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/main_buttons"
         android:text="@string/button0"
@@ -200,8 +201,8 @@
 
     <Button
         android:id="@+id/button_dot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_dot"
@@ -213,8 +214,8 @@
 
     <Button
         android:id="@+id/button_division"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_div"
@@ -225,8 +226,8 @@
 
     <Button
         android:id="@+id/button_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_del"
@@ -238,7 +239,7 @@
     <Button
         android:id="@+id/button_eqls"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/button_margin"
         android:backgroundTint="@color/special_buttons"
         android:text="@string/button_eql"
