--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="button_text_size">25sp</dimen>
     <dimen name="button_margin">2dp</dimen>
+    <dimen name="button_height">55sp</dimen>
+    <dimen name="button_width">75sp</dimen>
 </resources>
